test/libyul/yulSyntaxTests/linkersymbol_ewasm.yul
{
    linkersymbol("contract/library.sol:L")
}
// ====
// dialect: ewasm
// ----
// DeclarationError 4619: (6-18='linkersymbol'): Function "linkersymbol" not found.
